# demo

./: .env  Cargo.toml  README.md  docker-compose.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20250902_135115_create_partners_table.rs  m20250902_135450_create_users_table.rs  m20250902_135805_create_roles_table.rs  m20250902_135953_create_permissions_table.rs  m20250902_140227_create_user_roles_table.rs  m20250902_140431_create_role_permissions_table.rs  m20250902_140610_create_api_permissions_table.rs  m20250902_140736_create_partner_api_access_table.rs  m20250902_140858_create_audit_logs_table.rs  m20250905_095624_add_main_partner.rs  m20250905_113457_add_main_partner_admin_user.rs  m20250905_123641_default_roles.rs  m20250905_130736_add_default_permissions.rs  m20250905_135258_add_default_role_permissions.rs  m20250905_141701_add_default_user_roles.rs  m20250905_145214_add_default_api_permissions.rs  m20250905_170243_add_default_partner_api_accesses.rs
policies/: api.rego  authz.rego  data_helpers.rego  detailed_permissions.rego  role.rego
policies_old/: authz.rego  data_helpers.rego  detailed_permissions.rego  finance.rego
src/: error.rs  main.rs  seed.rs  startup.rs
src/api/: auth.rs  health.rs  mod.rs  partners.rs  permissions.rs  roles.rs  users.rs
src/entities/: api_permission.rs  audit_log.rs  mod.rs  partner.rs  partner_api_access.rs  permission.rs  role.rs  role_permission.rs  user.rs  user_role.rs
src/middleware/: auth.rs
src/policies/: api.rego  authz.rego  finance.rego  operations.rego  partner.rego  role.rego  user.rego
(+12 files in other folders)
