[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }

serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }





#sea-orm-migration = "0.12"

tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9"
opa-wasm = "0.1"
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4.11.0"
futures-util = "0.3.31"



migration = { path = "./migration" }
env_logger = "0.11.8"
dotenv = "0.15"

[workspace]
members = [
    "migration",
    "."
]
